--- a/dashboard.html
+++ b/dashboard.html
@@ -369,3 +369,75 @@
     </script>
 </body>
 </html>
+
+
+
+#Propósito general
+Este archivo implementa una interfaz web tipo dashboard para monitorear y controlar el bot de arbitraje triangular en Binance. Permite visualizar en tiempo real el estado del bot, la conexión con Binance, oportunidades de arbitraje detectadas, y controlar la ejecución del bot (iniciar, detener, actualizar).
+
+Estructura y componentes principales
+1. Estructura HTML y diseño visual
+Usa un diseño responsivo y moderno con CSS embebido (estilos dentro del <style>).
+Contiene una cabecera con el nombre y descripción del bot.
+Tres zonas principales:
+Controles: Botones para iniciar, detener y actualizar el bot.
+Estado: Tarjetas que muestran el estado del bot, la conexión con Binance, oportunidades encontradas y la última actualización.
+Oportunidades: Sección para listar oportunidades de arbitraje encontradas.
+2. Controles del Bot
+Botón Iniciar: Llama a startBot(), que emite el evento start_bot al servidor vía socket.
+Botón Detener: Llama a stopBot(), que emite stop_bot al servidor.
+Botón Actualizar Datos: Llama a refreshData(), que solicita oportunidades actualizadas.
+3. Estado del sistema
+Muestra visualmente:
+Estado del bot (conectado/desconectado/detenido).
+Estado de la conexión con Binance.
+Número de oportunidades encontradas.
+Última vez que se actualizaron los datos.
+4. Sección de oportunidades de arbitraje
+Inicialmente muestra un loader (“buscando oportunidades...”).
+Cuando llegan datos, muestra tarjetas con:
+La ruta del arbitraje.
+La ganancia estimada.
+El volumen y la hora de la oportunidad.
+Si no hay oportunidades, muestra un mensaje especial.
+5. Estilo visual
+Utiliza gradientes, tarjetas con blur, efectos de sombra y animaciones suaves para hover y loaders.
+Indicadores de estado (puntos verdes/rojos) para mostrar conectividad y actividad.
+Lógica JavaScript
+1. Socket.IO
+Se conecta al servidor usando Socket.IO para recibir y enviar eventos en tiempo real.
+Eventos escuchados:
+connect / disconnect: Actualiza el estado visual del bot.
+arbitrage_opportunities: Recibe y muestra nuevas oportunidades.
+bot_status: Actualiza el estado del bot y la conexión a Binance.
+error_message: Muestra una alerta en caso de error.
+2. Control de la UI
+Actualiza dinámicamente los elementos de la interfaz según el estado recibido.
+Cambia el texto y el estado visual de los botones e indicadores según las acciones del usuario y eventos recibidos.
+Actualiza la sección de oportunidades y la hora de la última actualización cuando llegan nuevos datos.
+3. Interacción usuario-servidor
+Al cargar la página, solicita el estado inicial y las oportunidades actuales.
+Solicita oportunidades nuevas automáticamente cada 30 segundos si el bot está corriendo.
+¿Qué NO hace este archivo?
+No ejecuta lógica de arbitraje ni conecta directamente con Binance: solo es la capa de presentación y control.
+No mantiene datos persistentes: los datos se reciben y muestran, pero el almacenamiento y la lógica de negocio están en el backend.
+No incluye autenticación ni control de usuarios.
+Resumen esquemático de funcionamiento
+El usuario abre la página:
+
+Se conecta al servidor por Socket.IO.
+Solicita el estado inicial y oportunidades.
+El usuario puede:
+
+Iniciar el bot (envía señal al backend).
+Detener el bot.
+Actualizar manualmente los datos.
+La interfaz se actualiza automáticamente:
+
+Cada vez que hay un cambio de estado o nuevas oportunidades.
+Visualmente muestra el estado y los datos relevantes.
+Sección de oportunidades:
+
+Muestra cada oportunidad con ruta, porcentaje de ganancia, volumen, y hora.
+En resumen
+El archivo dashboard.html es el panel web para el monitoreo y control del bot de arbitraje triangular en Binance, con comunicación en tiempo real vía sockets, actualizaciones automáticas y una interfaz moderna, clara y amigable para visualizar el desempeño y estado del bot y del mercado.
